Fix linespacing on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -23,7 +23,7 @@ h1, h2, h3, body, input, select, textarea {
 
 h1 {
     font-size: 35px;
-	line-height: 3.25em;
+	line-height: 1.5em;
     font-weight: 600;
 }
 
